--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <!-- FORUM-->
     <string name="FORUM_AUTHOR">作者：</string>
     <string name="FORUM_OPENNUM">回复数：</string>
+    <string name="FORUM_POST_COUNT">发帖：</string>
+    <string name="FORUM_TOPIC_COUNT">主题：</string>
 </resources>
