--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="FORUM_POST_COUNT">发帖：</string>
     <string name="FORUM_TOPIC_COUNT">主题：</string>
     <string name="FORUM_SEND_REPLY">发送</string>
+    <string name="FORUM_REPLY_SUCCESS">回复成功！</string>
+    <string name="FORUM_REPLY_FAILED">回复失败！</string>
 </resources>
